src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Big_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Big Event</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.Type</field>
                <operation>equals</operation>
                <value>EMEA Big Events</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Contacts (Big Events)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>Contact Type</description>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service/Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Former_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you learn that this individual has left the company but do not know where they went to, check this box to mark them as former. If you know where they went to, update their account.</inlineHelpText>
        <label>Former Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <globalPicklist>Gender</globalPicklist>
        <label>Gender</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Holiday_Mailing_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Holiday Mailing List checkbox</description>
        <label>Holiday Mailing List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Contact_Event_Date__c</fullName>
        <inlineHelpText>From Lead conversation</inlineHelpText>
        <label>Initial Contact Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Contact_Event__c</fullName>
        <inlineHelpText>From Lead conversion</inlineHelpText>
        <label>Initial Contact Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Type__c</fullName>
        <inlineHelpText>Provide additional information about the individuals type if &apos;Other&apos; is selected.</inlineHelpText>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Information__c</fullName>
        <description>Personal Contact Information for relationship building</description>
        <inlineHelpText>Use to track information for a contact to promote relationship building.</inlineHelpText>
        <label>Personal Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SAP_Personnel_ID__c</fullName>
        <label>SAP Personnel ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contact_Type__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Type__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contact_Type__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>EnerSys_Contact</fullName>
        <active>true</active>
        <label>EnerSys Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Other_Field_For_Roles_Contact</fullName>
        <active>true</active>
        <description>Use the &apos;Other&apos; field only for additional text when the Role field is set to Other. Please delete any text in this field or change the role to &apos;Other&apos;.</description>
        <errorConditionFormula>AND(
				NOT(ISPICKVAL(Contact_Type__c, &apos;Other&apos;)),   
				NOT(ISBLANK(Other_Contact_Type__c)), 
				$User.ProfileId &lt;&gt; $Label.Profile_ID_EnerSys_Integration, 
				$User.ProfileId &lt;&gt; $Label.Profile_ID_EnerSys_System_Administrator, 
				$User.ProfileId &lt;&gt; $Label.Profile_ID_System_Administrator	
)</errorConditionFormula>
        <errorMessage>Use the &apos;Other&apos; field only for additional text when the Contact Type field is set to Other. Please delete any text in this field or change the role to &apos;Other&apos;.</errorMessage>
    </validationRules>
</CustomObject>